<?xml version="1.0" encoding="utf-8"?>
<resources>


    <!-- App Branding Part starts -->
    <string name="app_name">Trevon</string>
    <!-- App Branding Part ends -->
    <string name="more_btn">View All</string>
    <string name="btn_otp">Send OTP</string>
    <string name="tv_login_mobile_error">Enter Valid Mobile Number</string>
    <string name="tv_login_email_error">Enter Mobile Number</string>
    <string name="et_login_id_hint">Mobile Number</string>
    <string name="forgot_text">Forgot Password ! </string>
    <string name="facebook_app_id">388535089215681</string>
    <string name="fb_login_protocol_scheme">388535089215681</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="select_string">Select an item</string>
    <string name="select_camera">Select Camera</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="pin_content_desc">PIN input field</string>
    <string name="share_intent_title">Share</string>
    <string name="share_whatsapp_not_instaled">share_whatsapp_not_instaled</string>
    <string name="Rs">\u20B9</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="divider_string"> --------------- OR --------------- </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="gst">Enter GST Number</string>
    <string name="username">User Name</string>
    <string name="mobile_number">Mobile Number</string>

    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>

    <string name="city">city*</string>
    <string name="street">Locality/area or street*</string>
    <string name="house_num">Flat no., Building Name*</string>

    <string name="pincode">Pincode*</string>
    <string name="state">state*</string>
    <string name="landmark">Landmark*</string>
    <string name="name">Name*</string>
    <string name="mobile_number_">Mobile Number*</string>
    <string name="alternate_mobile_number">Alternate Mobile Number*</string>

    <string name="registration_otp_error_text">Incorrect otp</string>
    <string name="resend">Resend Code</string>
    <string name="otp_text_setpassword">Set your Password and Continue</string>
    <string name="set_pass">Set Password</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="set_password_button">Continue</string>
    <string name="resend_expired">Expired !</string>
    <string name="otp_pass_toast">Enter Password</string>
    <string name="otp_con_toast">Enter Confirm Password</string>
    <string name="otp_match_toast">Password and Confirm Password does not match</string>

    <string name="top_otp_text">You\'ve made a great decision</string>
    <string name="OTP_mob_text1">We have sent you an SMS on  </string>
    <string name="OTP_text_email">We have sent you an Email on  </string>
    <string name="email_star">*****@*********</string>
    <string name="OTP_mob_text2">  with a 4-digit verification code (OTP)</string>


    <string name="storage_not_available_to_write">Device storage is not available to write.</string>
    <string name="storage_not_available_to_read">Device storage is not available to read.</string>
    <string name="pass_msg">Once the Password is successfully changed, you will need to login again.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="pass1">Current Password</string>
    <string name="pass2">New Password</string>
    <string name="pass3">Re-type New Password</string>
    <string name="order_placed">Order Placed</string>
    <string name="login_gg_text">Login With Gmail</string>
    <string-array name="bgColors">
        <item>#3994c0</item>
        <item>#bb65be</item>
        <item>#3fadbc</item>
        <item>#a7385d</item>
        <item>#b68d4b</item>
        <item>#69ab61</item>
        <item>#b5a838</item>
        <item>#29b59b</item>
        <item>#bf6542</item>
        <item>#a3c14f</item>
        <item>#c14f6a</item>
        <item>#805cd0</item>
        <item>#4767df</item>
        <item>#26a8bb</item>
        <item>#d07d5c</item>
        <item>#d07d5c</item>
        <item>#5bbf5e</item>
    </string-array>

</resources>