<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="40dip"
            android:elevation="25dp"
            android:src="@drawable/error_images"/>



        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/forgot_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_text"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black_color"
                android:textSize="18dp" />


            <EditText
                android:id="@+id/mobile_number_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_box_background"
                android:drawablePadding="8dp"
                android:inputType="text"
                android:hint="@string/et_login_id_hint"
                android:maxLines="1"
                android:padding="15dp"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/forgot_email_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="5dp"
                android:text="@string/tv_login_email_error"
                android:textColor="#ff0000"
                android:visibility="gone"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_round_login">

                <Button
                    android:id="@+id/btn_send_otp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="?android:selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/btn_otp"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <LinearLayout
                android:visibility="gone"
                android:id="@+id/click_for_login_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/login_text_forgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
