<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_signup_background"
    android:fillViewport="true"

    >
    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/top_otp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_otp_text"
                android:textColor="#0BA8DF"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/OTP_mob_text"
                android:layout_below="@+id/top_otp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="#848e92"
                />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/forgot_otp_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/caution_icon" />

            <TextView
                android:id="@+id/forgot_otp_error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp"
                android:text="@string/registration_otp_error_text"
                android:textColor="#FF0000"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/pin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal">

            <EditText
                android:background="@drawable/gray_border"
                android:padding="5dp"
                android:id="@+id/pin_first_edittext_forgot_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pin_content_desc"
                android:gravity="center"
                android:textSize="24sp"
                android:cursorVisible="false"
                android:maxLength="1"
                android:minEms="2"
                android:digits="1234567890"
                android:inputType="number"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />

            <EditText
                android:background="@drawable/gray_border"
                android:padding="5dp"
                android:id="@+id/pin_second_edittext_forgot_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/pin_content_desc"
                android:gravity="center"
                android:textSize="24sp"
                android:cursorVisible="false"
                android:maxLength="1"
                android:minEms="2"
                android:digits="1234567890"
                android:inputType="number"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />

            <EditText
                android:background="@drawable/gray_border"
                android:padding="5dp"
                android:id="@+id/pin_third_edittext_forgot_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/pin_content_desc"
                android:gravity="center"
                android:textSize="24sp"
                android:cursorVisible="false"
                android:maxLength="1"
                android:minEms="2"
                android:digits="1234567890"
                android:inputType="number"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />

            <EditText
                android:background="@drawable/gray_border"
                android:padding="5dp"
                android:id="@+id/pin_forth_edittext_forgot_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/pin_content_desc"
                android:cursorVisible="false"
                android:digits="1234567890"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:minEms="2"
                android:textSize="24sp" />

            <!--   <EditText android:id="@+id/pin_fifth_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/pin_content_desc"
                   android:gravity="center"
                   android:cursorVisible="false"
                   android:maxLength="1"
                   android:minEms="2"
                   android:inputType="number"
                   android:focusable="true"
                   android:focusableInTouchMode="true"
                   />-->
        </LinearLayout>

        <EditText
            android:id="@+id/pin_hidden_edittext_forgot_otp"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:cursorVisible="false"
            android:background="@null"
            android:maxLength="5"
            android:inputType="number"
            android:digits="1234567890"
            android:textColor="#00000000"
            android:contentDescription="@string/pin_content_desc" />
        <RelativeLayout
            android:id="@+id/resend_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:id="@+id/resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend"
                android:textColor="@color/gray_color"
                android:gravity="left"
                android:enabled="false"
                android:clickable="false"
                android:textSize="16sp"
                tools:targetApi="lollipop" />
            <TextView
                android:id="@+id/resend_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="16sp"
                android:textColor="@color/gray_color"
                android:text="00:13"/>



        </RelativeLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/password_layout_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/otp_text_setpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_color"
                    android:text="@string/otp_text_setpassword"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/grey_border"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/set_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:drawablePadding="10dp"
                    android:textCursorDrawable="@null"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:hint="@string/set_pass"
                    android:padding="10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#DADEE0" />

                <EditText
                    android:id="@+id/conf_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:drawablePadding="10dp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@null"
                    android:hint="@string/conf_pass"
                    android:padding="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/forgot_otp_button_view"
                android:background="?android:selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <Button
                    android:id="@+id/set_password_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_round_login"
                    android:text="@string/set_password_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </LinearLayout>
        </LinearLayout>






    </LinearLayout>
</ScrollView>