<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/change_password_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/black_post_title"
        app:title="Change Password"
        app:theme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@color/white"
        />

    <!--<include layout="@layout/app_toolbar"/>-->

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPasswordLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextHint"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_current_password"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Yellow"
                        android:hint="@string/pass1"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPasswordLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextHint"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_new_password"
                        android:layout_width="match_parent"
                        android:textSize="16sp"
                        android:textColor="@color/Yellow"
                        android:layout_height="wrap_content"
                        android:hint="@string/pass2"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPasswordLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextHint"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:textSize="16sp"
                        android:textColor="@color/Yellow"
                        android:layout_height="wrap_content"
                        android:hint="@string/pass3"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:ems="8"
                        android:id="@+id/button_change_pass"
                        android:text="Save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:background="@drawable/button_round_login"
                        />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:visibility="gone"
                android:id="@+id/click_forgot_password"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:text="@string/forgot_password"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:visibility="gone"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/View03"
                android:layout_width="60dp"
                android:layout_height="1dip"
                android:background="#ccc" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:textAppearance="?android:textAppearanceSmall"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:text="@string/pass_msg"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>

